# amx_base64.c

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  amx_base64.c  amx_base64.h  makefile
src/: amx.h  amx_base64.c  amx_base64.h  amx_helper.h  amxb64dec.c  amxb64enc.c
tests/: amx_base64_tests.c  ipsum_4096.txt  ipsum_4096_enc.txt  run_tests.c  test_dec.c  test_enc.c  test_helper.h  tests.c
